overflow fix

--- a/src/components/Attend.scss
+++ b/src/components/Attend.scss
@@ -2,4 +2,6 @@
     width: 100%;
     min-height: 800px;
     background: var(--deep-green);
+    overflow-x: hidden;
+    padding-bottom: 4rem;
 }
